docs: adds epinio notes

--- a/epinio/deck.yaml
+++ b/epinio/deck.yaml
@@ -24,7 +24,9 @@ cluster:
 decks:
   - name: epinio
     namespace: default
-    notes: "Please find the Epinio UI at: 127.0.0.1.nip.io:8443/ with username 'admin' and password 'password'"
+    notes: |
+      Please find the Epinio UI at: https://127.0.0.1.nip.io:8443/ with username 'admin' and password 'password'.
+      Remark: You will need to trust the local SSL certificate in the browser as it is just created in your local cluster.
     sources:
       - type: file
         ref: https://github.com/jetstack/cert-manager/releases/download/v1.8.0/cert-manager.crds.yaml
