--- a/django/deck.yaml
+++ b/django/deck.yaml
@@ -25,13 +25,15 @@ decks:
   - name: spacecrafts
     namespace: default
     notes: |
-      Welcome to the django-hurricane (go to https://django-hurricane.io) spacecrafts demo application. You can check out
-      the GraphQL editor at: spacecrafts.127.0.0.1.nip.io:8080/graphql 
-      The django admin is running at: spacecrafts.127.0.0.1.nip.io:8080/graphql
+      
+      Welcome to the django-hurricane (go to https://django-hurricane.io) spacecrafts demo application. 
+      You can check out the GraphQL editor at: http://spacecrafts.127.0.0.1.nip.io:8080/graphql 
+      The django admin is running at: http://spacecrafts.127.0.0.1.nip.io:8080/graphql
       
       If you want to enter the django admin, please make sure you create yourself an admin account running: kubectl exec -it <pod> -- python manage.py create superuser
 
     sources:
+      # This is a the PostgreSQL Database
       - type: helm
         ref: https://opensource.zalando.com/postgres-operator/charts/postgres-operator
         chart: postgres-operator
@@ -59,5 +61,14 @@ decks:
               bar: { }
             postgresql:
               version: "14"
+      # The workloads for the django spacecrafts demo
+      - type: file
+        ref: https://raw.githubusercontent.com/Getdeck/wharf/main/django/spacecrafts/configmap.yaml
+      - type: file
+        ref: https://raw.githubusercontent.com/Getdeck/wharf/main/django/spacecrafts/service.yaml
+      - type: file
+        ref: https://raw.githubusercontent.com/Getdeck/wharf/main/django/spacecrafts/deployment.yaml
+      - type: file
+        ref: https://raw.githubusercontent.com/Getdeck/wharf/main/django/spacecrafts/ingress.yaml
 
 
