fix: add django spacecrafts demo

--- a/django/deck.yaml
+++ b/django/deck.yaml
@@ -56,7 +56,7 @@ decks:
                 - createdb
               django_user: [ ]  # role for application foo
             databases:
-              webshop: django  # dbname: owner
+              django: django  # dbname: owner
             preparedDatabases:
               bar: { }
             postgresql:
