--- a/django/deck.yaml
+++ b/django/deck.yaml
@@ -26,12 +26,19 @@ decks:
     namespace: default
     notes: |
       
-      Welcome to the django-hurricane (go to https://django-hurricane.io) spacecrafts demo application. 
-      You can check out the GraphQL editor at: http://spacecrafts.127.0.0.1.nip.io:8080/graphql 
-      The django admin is running at: http://spacecrafts.127.0.0.1.nip.io:8080/graphql
+      Welcome to the django-hurricane (go to https://django-hurricane.io) spacecrafts demo application. Once the app is read you can:
       
-      If you want to enter the django admin, please make sure you create yourself an admin account running: kubectl exec -it <pod> -- python manage.py create superuser
+      - check out the GraphQL editor at: http://spacecrafts.127.0.0.1.nip.io:8080/graphql 
+        type in a simple Graphql query to get started
+        {
+          allComponents {
+            title
+          }
+        }
+      - enter django admin at: http://spacecrafts.127.0.0.1.nip.io:8080/graphql
+        if you want to enter the django admin, please make sure you create yourself an admin account running: kubectl exec -it <pod> -- python manage.py create superuser
 
+      Go to https://django-hurricane.io/basic-app/ to read on about django-hurricane and this demo application.
     sources:
       # This is a the PostgreSQL Database
       - type: helm
